--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,71 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+/* Reset CSS Start Here */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  font-size: 62.5%; /* Reset Font Size 1rem = 10px */
+  scroll-behavior: smooth;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-decoration: none;
+  display: inline-block;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  outline: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-family: inherit;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+input {
+  font-family: inherit;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+}
+/* Reset CSS End Here */
+
+:root {
+  --primary-font: "JetBrains Mono", monospace;
+
+  --primary-color: #ffd91a;
+  --primary-shade-color: #fff7d1;
+  --active-link-color: #fff0a3;
+  --black-color: #121314;
+  --text-color-1: #132238;
+  --text-color-2: #556070;
+  --text-color-3: #697484;
+  --text-color-4: #87909d;
+  --text-color-5: #a5acb5;
+  --text-color-6: #424e60;
+  --white-color: #ffffff;
+
+  /* light theme */
+  --bg-color: var(--white-color);
+}
+
+.container {
+  max-width: 1340px;
+  margin-inline: auto;
+  padding-inline: 10px;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: var(--primary-font);
+  background-color: var(--bg-color);
 }
