--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -49,8 +49,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: drop-shadow(0 0 10rem rgba(0, 0, 0, 0.123));
-  animation: anim 1s linear infinite alternate;
+  /* filter: drop-shadow(0 0 10rem rgba(0, 0, 0, 0.123));
+  animation: anim 1s linear infinite alternate; */
 }
 
 /* @keyframes anim {
